--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ Soft red = #FBCDBF
 /* Default style for all body*/
 body{
     font-family: 'Dosis', sans-serif;
-    text-align: center;
     font-size: 22px;
     line-height: 1.7;
     margin: 0;
@@ -16,6 +15,7 @@ h1{
     line-height: 1.3;
 }
 
+
 h2{
     font-size: 42px;
 }
@@ -23,9 +23,12 @@ h2{
 a{
   color:white;
 }
+
+a:hover{
+  background-color:#ccccb3;
 }
 
-a.tag2:link {
+a.tag2{
     font-size: 18px;
     font-weight: bold;
     text-decoration: none;
@@ -33,11 +36,16 @@ a.tag2:link {
     padding:  15px 65px;
     margin-top: 35px;
     display: inline-block;
-  color: #882064
+  color: #882064;
+}
+
+a.tag3{
+  color:#882064;
+  padding:  15px 65px;
 }
 
 h2,{
-    color: #882064
+    color: #882064;
 }
 
 img{
@@ -50,10 +58,12 @@ section{
     width: 720px;
     margin-left: auto;
     margin-right: auto;
+ text-align: center;
 }
 .cover-image {
  background-image: url('https://s1.it.atcdn.net/wp-content/uploads/2016/09/Waterton-Lakes-National-Park-view-from-Bears-Hump-by-iStock_81098425.jpg');
-  height: 1000px;
+   background-color: #cccccc;
+  height:1000px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -67,6 +77,16 @@ section{
   left: 25%;
   transform: translate(-25%, -30%);
   color: white;
+}
+
+.emailme{
+  text-align: center;
+}
+
+.grid{
+  display: grid;
+  grid-template: 25% 25% 25% 25%/ 60% 60% 60% ;
+ transform: translate(-38%, -25%);
 }
 
 
