--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ section{
     margin-right: auto;
  text-align: center;
 }
-.cover-image {
+@media (min-width:641px) {.cover-image {
  background-image: url('https://s1.it.atcdn.net/wp-content/uploads/2016/09/Waterton-Lakes-National-Park-view-from-Bears-Hump-by-iStock_81098425.jpg');
    background-color: #cccccc;
   height:1000px;
@@ -71,7 +71,7 @@ section{
   background-size: cover;
   position: relative;
 }
-
+}
 .cover-text{
   text-align: left;
   position: absolute;
