--- a/css/styles.css
+++ b/css/styles.css
@@ -60,17 +60,18 @@ section{
     margin-right: auto;
  text-align: center;
 }
-@media (min-width:641px) {.cover-image {
+.cover-image {
  background-image: url('https://s1.it.atcdn.net/wp-content/uploads/2016/09/Waterton-Lakes-National-Park-view-from-Bears-Hump-by-iStock_81098425.jpg');
    background-color: #cccccc;
   height:1000px;
-  width: 1000px;
+  width: auto ;
+  max-width: 100% ;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
 }
-}
+
 .cover-text{
   text-align: left;
   position: absolute;
