--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ section{
  background-image: url('https://s1.it.atcdn.net/wp-content/uploads/2016/09/Waterton-Lakes-National-Park-view-from-Bears-Hump-by-iStock_81098425.jpg');
    background-color: #cccccc;
   height:1000px;
-  width:1000px;
+  wiwidth:1000px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
