--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,7 @@ section{
 .cover-image {
  background-image: url('https://s1.it.atcdn.net/wp-content/uploads/2016/09/Waterton-Lakes-National-Park-view-from-Bears-Hump-by-iStock_81098425.jpg');
    background-color: #cccccc;
-  max-height:100vh;
-    width:100vw;
+  max-height:100%
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
