--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ section{
     width:100%;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   position: relative;
 }
 
