--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,7 @@ section{
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+    object-fit: cover;
 }
 
 .cover-text{
