--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,8 @@ section{
 .cover-image {
  background-image: url('https://s1.it.atcdn.net/wp-content/uploads/2016/09/Waterton-Lakes-National-Park-view-from-Bears-Hump-by-iStock_81098425.jpg');
    background-color: #cccccc;
-
-    object-fit: cover;
+width:100%;
+    height: auto;
 }
 
 .cover-text{
