--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ section{
     margin-right: auto;
  text-align: center;
 }
-@media (max-width: 980px) {.cover-image {
+.cover-image {
  background-image: url('https://s1.it.atcdn.net/wp-content/uploads/2016/09/Waterton-Lakes-National-Park-view-from-Bears-Hump-by-iStock_81098425.jpg');
    background-color: #cccccc;
   height:1000px;
@@ -68,7 +68,6 @@ section{
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-}
 }
 
 .cover-text{
