--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,7 @@ section{
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+    background-attachment: fixed;
     }}
 
 .cover-text{
