--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,10 @@ section{
     margin-right: auto;
  text-align: center;
 }
+
+[class*="col-"] {
+  width: 100%;
+
 .cover-image {
  background-image: url('https://s1.it.atcdn.net/wp-content/uploads/2016/09/Waterton-Lakes-National-Park-view-from-Bears-Hump-by-iStock_81098425.jpg');
   height:1000px;
