--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ section{
  text-align: center;
 }
 
-@media (min-width: 320px) and (max-width: 480px) { .cover-image {
+.cover-image {
  background-image: url('https://s1.it.atcdn.net/wp-content/uploads/2016/09/Waterton-Lakes-National-Park-view-from-Bears-Hump-by-iStock_81098425.jpg');
   height:1000px;
   background-position: center;
