--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,8 @@ body{
     font-family: 'Dosis', sans-serif;
     font-size: 22px;
     line-height: 1.7;
-    margin: 0;
-    display:center;
+    margin: auto;
+    
 }
 
 h1{
