--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,15 @@
+
 /*
 Purple = #882064
 Soft red = #FBCDBF
 */
-
 /* Default style for all body*/
 body{
     font-family: 'Dosis', sans-serif;
     font-size: 22px;
     line-height: 1.7;
-       margin-left:auto;
-  margin-right:auto;
-  width:960px;
-    
+    margin: 0;
+  display: center;
 }
 
 h1{
@@ -91,5 +89,4 @@ section{
   grid-template: 25% 25% 25% 25%/ 60% 60% 60% ;
  transform: translate(-38%, -25%);
 }
-
 
