--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,7 @@ body{
     font-size: 22px;
     line-height: 1.7;
     margin: auto;
-  display: center;
-    align: center;
+  transform: translate(-%, -25%)
 }
 
 h1{
