--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body{
     font-family: 'Dosis', sans-serif;
     font-size: 22px;
     line-height: 1.7;
- margin: 0px auto !important;
+ height:100%;
 }
 
 h1{
