--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,7 @@ body{
     font-family: 'Dosis', sans-serif;
     font-size: 22px;
     line-height: 1.7;
- height:100%;
-    margin:0;
+    margin:0 auto;
 }
 
 h1{
