--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,9 @@ body{
     font-family: 'Dosis', sans-serif;
     font-size: 22px;
     line-height: 1.7;
+    margin: 0;
+  display: center;
+  
 }
 
 h1{
@@ -55,7 +58,7 @@ img{
 section{
     padding-top: 100px;
     padding-bottom: 170px;
-    width: 500px;
+    width: 720px;
     margin-left: auto;
     margin-right: auto;
  text-align: center;
@@ -87,3 +90,4 @@ section{
   grid-template: 25% 25% 25% 25%/ 60% 60% 60% ;
  transform: translate(-38%, -25%);
 }
+
