--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,9 @@ body{
     font-family: 'Dosis', sans-serif;
     font-size: 22px;
     line-height: 1.7;
+    margin: 0;
+  display: center;
+  
 }
 
 h1{
@@ -55,7 +58,7 @@ img{
 section{
     padding-top: 100px;
     padding-bottom: 170px;
-    width: 600px;
+    width: 720px;
     margin-left: auto;
     margin-right: auto;
  text-align: center;
