--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ img{
 section{
     padding-top: 100px;
     padding-bottom: 170px;
-    
+    width: 650px;
     margin-left: auto;
     margin-right: auto;
  text-align: center;
