--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 /*
 Purple = #882064
 Soft red = #FBCDBF
@@ -6,11 +5,9 @@ Soft red = #FBCDBF
 /* Default style for all body*/
 body{
     font-family: 'Dosis', sans-serif;
-    font-size: 25px;
+    font-size: 22px;
     line-height: 1.7;
-    margin: auto;
-  display: center;
-  
+    margin: 0;
 }
 
 h1{
@@ -59,11 +56,13 @@ section{
     padding-top: 100px;
     padding-bottom: 170px;
     width: 720px;
-    margin:auto;
+    margin-left: auto;
+    margin-right: auto;
  text-align: center;
 }
 .cover-image {
  background-image: url('https://s1.it.atcdn.net/wp-content/uploads/2016/09/Waterton-Lakes-National-Park-view-from-Bears-Hump-by-iStock_81098425.jpg');
+   background-color: #cccccc;
   height:1000px;
   background-position: center;
   background-repeat: no-repeat;
@@ -76,6 +75,7 @@ section{
   position: absolute;
   top: 50%;
   left: 25%;
+  transform: translate(-25%, -30%);
   color: white;
 }
 
@@ -88,5 +88,6 @@ section{
   grid-template: 25% 25% 25% 25%/ 60% 60% 60% ;
  transform: translate(-38%, -25%);
 }
+
 
 
