--- a/css/styles.css
+++ b/css/styles.css
@@ -56,8 +56,8 @@ section{
     padding-top: 100px;
     padding-bottom: 170px;
     width: 720px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 300px;
+    margin-right: 300px;
  text-align: center;
 }
 .cover-image {
@@ -68,6 +68,7 @@ section{
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+ 
 }
 
 .cover-text{
@@ -88,6 +89,4 @@ section{
   grid-template: 25% 25% 25% 25%/ 60% 60% 60% ;
  transform: translate(-38%, -25%);
 }
-
-
 
