--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ section{
     padding-top: 100px;
     padding-bottom: 170px;
     width: 720px;
-   margin: auto;
+   margin: 0 auto;
  text-align: center;
 }
 .cover-image {
