--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body{
     font-family: 'Dosis', sans-serif;
     font-size: 22px;
     line-height: 1.7;
-    margin: 0;
+    margin: 0 auto;
 }
 
 h1{
@@ -56,7 +56,7 @@ section{
     padding-top: 100px;
     padding-bottom: 170px;
     width: 720px;
-   margin: 0 auto;
+    margin: 0 auto;
  text-align: center;
 }
 .cover-image {
@@ -66,16 +66,15 @@ section{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
- 
+  margin: 0 auto;
 }
 
 .cover-text{
-  text-align: left;
+  text-align: bottom;
   position: absolute;
   top: 50%;
   left: 25%;
-  transform: translate(-25%, -30%);
+  transform: translate(-25%, 30%);
   color: white;
 }
 
