--- a/css/styles.css
+++ b/css/styles.css
@@ -43,11 +43,11 @@ a.tag2{
     padding:  15px 65px;
     margin-top: 35px;
     display: inline-block;
-  color: #882064;
+  color: #093E8D;
 }
 
 a.tag3{
-  color:#882064;
+  color:#093E8D;
   padding:  15px 65px;
   font-size: 20px;
 }
@@ -99,4 +99,3 @@ section{
   text-align: center;
   padding-bottom: 100px;
 }
-
