--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ a.tag2{
     padding:  15px 65px;
     margin-top: 35px;
     display: inline-block;
-  color: #093E8D;
+  color: black;
 }
 
 a.tag3{
