--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,13 @@ section{
     border-radius: 25%;
 }
 
+footer{
+  font-family: 'Dosis', sans-serif;
+  color: black;
+  font-size: 20px;
+  text-align: center;
+}
+
 /* Dropdwon button Style */
 
 .dropbtn {
